build: move keymaps into own files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-pack/*
+/lazy-lock.json
+/lazy-lock.lua
+
+/lazy
+
+/plugin/packer_compiled.lua
+
+/tree-sitter-parsers
+
+*.swp
+*.swo
+*.un~
+*~
+.undodir/
+.swap/
+.backup/
+.cache/
+.session/
+
+/lsp.log
+
+/mason/
+
